# base64-c

./: .gitignore  CMakeLists.txt  README.md
src/: base64.c  base64.h
test/: test_base64.c
